{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 289,
  "lineage": "ad2da37d-529b-6304-13fb-e259ba755de5",
  "resources": [
    {
      "module": "module.perring",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-0fada4c0195368ba2",
            "peer_owner_id": "598756948389",
            "peer_region": "eu-west-1",
            "peer_vpc_id": "vpc-04cd4bc594d22c467",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_eip.nat_eip1",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_nat_gateway.nat1",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.private_nat_gateway1",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_route_table_association.privateRTassoc",
            "module.vpc.aws_route_table_association.publicRTassoc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc1.aws_eip.nat_eip1",
            "module.vpc1.aws_eip.nat_eip11",
            "module.vpc1.aws_internet_gateway.ig1",
            "module.vpc1.aws_nat_gateway.nat1",
            "module.vpc1.aws_nat_gateway.nat11",
            "module.vpc1.aws_route.private_nat_gateway1",
            "module.vpc1.aws_route.private_nat_gateway11",
            "module.vpc1.aws_route.public_internet_gateway1",
            "module.vpc1.aws_route_table.privateRT1",
            "module.vpc1.aws_route_table.publicRT1",
            "module.vpc1.aws_route_table_association.privateRTassoc1",
            "module.vpc1.aws_route_table_association.publicRTassoc1",
            "module.vpc1.aws_subnet.private_subnet1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.perring",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "this1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "auto_accept": true,
            "id": "pcx-0fada4c0195368ba2",
            "vpc_peering_connection_id": "pcx-0fada4c0195368ba2"
          },
          "dependencies": [
            "module.perring.aws_vpc_peering_connection.this",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_eip.nat_eip1",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_nat_gateway.nat1",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.private_nat_gateway1",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_route_table_association.privateRTassoc",
            "module.vpc.aws_route_table_association.publicRTassoc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc1.aws_eip.nat_eip1",
            "module.vpc1.aws_eip.nat_eip11",
            "module.vpc1.aws_internet_gateway.ig1",
            "module.vpc1.aws_nat_gateway.nat1",
            "module.vpc1.aws_nat_gateway.nat11",
            "module.vpc1.aws_route.private_nat_gateway1",
            "module.vpc1.aws_route.private_nat_gateway11",
            "module.vpc1.aws_route.public_internet_gateway1",
            "module.vpc1.aws_route_table.privateRT1",
            "module.vpc1.aws_route_table.publicRT1",
            "module.vpc1.aws_route_table_association.privateRTassoc1",
            "module.vpc1.aws_route_table_association.publicRTassoc1",
            "module.vpc1.aws_subnet.private_subnet1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.perring",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "this2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0fada4c0195368ba2",
            "vpc_peering_connection_id": "pcx-0fada4c0195368ba2"
          },
          "dependencies": [
            "module.perring.aws_vpc_peering_connection.this",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_eip.nat_eip1",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_nat_gateway.nat1",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.private_nat_gateway1",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_route_table_association.privateRTassoc",
            "module.vpc.aws_route_table_association.publicRTassoc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc1.aws_eip.nat_eip1",
            "module.vpc1.aws_eip.nat_eip11",
            "module.vpc1.aws_internet_gateway.ig1",
            "module.vpc1.aws_nat_gateway.nat1",
            "module.vpc1.aws_nat_gateway.nat11",
            "module.vpc1.aws_route.private_nat_gateway1",
            "module.vpc1.aws_route.private_nat_gateway11",
            "module.vpc1.aws_route.public_internet_gateway1",
            "module.vpc1.aws_route_table.privateRT1",
            "module.vpc1.aws_route_table.publicRT1",
            "module.vpc1.aws_route_table_association.privateRTassoc1",
            "module.vpc1.aws_route_table_association.publicRTassoc1",
            "module.vpc1.aws_subnet.private_subnet1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045b03147dbaf4f21",
            "domain": "vpc",
            "id": "eipalloc-045b03147dbaf4f21",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-138-60-237.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.60.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8e9d15917160656",
            "domain": "vpc",
            "id": "eipalloc-0c8e9d15917160656",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-136-234-216.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.234.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:internet-gateway/igw-06ad1c7f8ab0ec0e3",
            "id": "igw-06ad1c7f8ab0ec0e3",
            "owner_id": "598756948389",
            "tags": {
              "Name": "EKS-Cluster-igw"
            },
            "tags_all": {
              "Name": "EKS-Cluster-igw"
            },
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045b03147dbaf4f21",
            "association_id": "eipassoc-00cab80cba4aa2ad0",
            "connectivity_type": "public",
            "id": "nat-0bd82644f8193e96a",
            "network_interface_id": "eni-0d4a1bf56e42f5b7c",
            "private_ip": "192.168.2.247",
            "public_ip": "18.138.60.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027f28acd62f3be04",
            "tags": {
              "Name": "EKS-Cluster-NAT-Gateway"
            },
            "tags_all": {
              "Name": "EKS-Cluster-NAT-Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8e9d15917160656",
            "association_id": "eipassoc-09eda712729eae11b",
            "connectivity_type": "public",
            "id": "nat-0fd20bfa51d02eece",
            "network_interface_id": "eni-0265454f96ba0452e",
            "private_ip": "192.168.1.47",
            "public_ip": "18.136.234.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de04df3a8994b22b",
            "tags": {
              "Name": "EKS-Cluster-NAT-Gateway"
            },
            "tags_all": {
              "Name": "EKS-Cluster-NAT-Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a8a9c1bed226e8951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bd82644f8193e96a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a8a9c1bed226e895",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/1",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a8a9c1bed226e895929355840",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fd20bfa51d02eece",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a8a9c1bed226e895",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip1",
            "module.vpc.aws_nat_gateway.nat1",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06ad1c7f8ab0ec0e3",
            "id": "r-rtb-0aec3eabec6a69cca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aec3eabec6a69cca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:route-table/rtb-0a8a9c1bed226e895",
            "id": "rtb-0a8a9c1bed226e895",
            "owner_id": "598756948389",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EKS-Cluster-private-route-table"
            },
            "tags_all": {
              "Name": "EKS-Cluster-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:route-table/rtb-0aec3eabec6a69cca",
            "id": "rtb-0aec3eabec6a69cca",
            "owner_id": "598756948389",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EKS-Cluster-public-route-table"
            },
            "tags_all": {
              "Name": "EKS-Cluster-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRTassoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13a59af2380b7f3",
            "route_table_id": "rtb-0a8a9c1bed226e895",
            "subnet_id": "subnet-0ab23aafeacf2a2b6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063076204778078ce",
            "route_table_id": "rtb-0a8a9c1bed226e895",
            "subnet_id": "subnet-00d30f202861250f1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRTassoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0596f593e3d5d9165",
            "route_table_id": "rtb-0aec3eabec6a69cca",
            "subnet_id": "subnet-0de04df3a8994b22b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dad055114aa80c44",
            "route_table_id": "rtb-0aec3eabec6a69cca",
            "subnet_id": "subnet-027f28acd62f3be04"
          },
          "dependencies": [
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:subnet/subnet-0ab23aafeacf2a2b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab23aafeacf2a2b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster-192.168.3.0/24-private-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster-192.168.3.0/24-private-subnet"
            },
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:subnet/subnet-00d30f202861250f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d30f202861250f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster-192.168.4.0/24-private-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster-192.168.4.0/24-private-subnet"
            },
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:subnet/subnet-0de04df3a8994b22b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de04df3a8994b22b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster-192.168.1.0/24-public-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster-192.168.1.0/24-public-subnet"
            },
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:subnet/subnet-027f28acd62f3be04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027f28acd62f3be04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster-192.168.2.0/24-public-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster-192.168.2.0/24-public-subnet"
            },
            "vpc_id": "vpc-0b7fba9f1bdb4f0c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:598756948389:vpc/vpc-0b7fba9f1bdb4f0c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0049e9939ac9185b9",
            "default_route_table_id": "rtb-001ccf13300d432d7",
            "default_security_group_id": "sg-0fadef4bfce170cab",
            "dhcp_options_id": "dopt-089fe616d4ac860ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7fba9f1bdb4f0c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001ccf13300d432d7",
            "owner_id": "598756948389",
            "tags": {
              "Name": "EKS-Cluster-vpc"
            },
            "tags_all": {
              "Name": "EKS-Cluster-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efcdef75d459b66a",
            "domain": "vpc",
            "id": "eipalloc-0efcdef75d459b66a",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-212-39-27.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.39.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip11",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031e2dbefe984ff46",
            "domain": "vpc",
            "id": "eipalloc-031e2dbefe984ff46",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-170-157-24.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.157.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:internet-gateway/igw-0cfd90754b0aba0f4",
            "id": "igw-0cfd90754b0aba0f4",
            "owner_id": "598756948389",
            "tags": {
              "Name": "EKS-Cluster1-igw"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-igw"
            },
            "vpc_id": "vpc-04cd4bc594d22c467"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efcdef75d459b66a",
            "association_id": "eipassoc-03ad02d81bc839b1c",
            "connectivity_type": "public",
            "id": "nat-09e26687e8b17e6df",
            "network_interface_id": "eni-05dcea6e8fd57d16a",
            "private_ip": "172.168.2.48",
            "public_ip": "52.212.39.27",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cde58935c48306b2",
            "tags": {
              "Name": "EKS-Cluster1-NAT-Gateway"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-NAT-Gateway"
            }
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat11",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031e2dbefe984ff46",
            "association_id": "eipassoc-03f92991b2026aa09",
            "connectivity_type": "public",
            "id": "nat-052d01d87130dedae",
            "network_interface_id": "eni-0c5a1db14a8502fa2",
            "private_ip": "172.168.1.154",
            "public_ip": "54.170.157.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0466c4741188b0f",
            "tags": {
              "Name": "EKS-Cluster1-NAT-Gateway"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-NAT-Gateway"
            }
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip11",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06cc24f0f5a952dbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09e26687e8b17e6df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cc24f0f5a952dbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip1",
            "module.vpc1.aws_nat_gateway.nat1",
            "module.vpc1.aws_route_table.privateRT1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway11",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/1",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06cc24f0f5a952dbd929355840",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052d01d87130dedae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cc24f0f5a952dbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip11",
            "module.vpc1.aws_nat_gateway.nat11",
            "module.vpc1.aws_route_table.privateRT1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cfd90754b0aba0f4",
            "id": "r-rtb-093e2ec5205e2574e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093e2ec5205e2574e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.ig1",
            "module.vpc1.aws_route_table.publicRT1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:route-table/rtb-06cc24f0f5a952dbd",
            "id": "rtb-06cc24f0f5a952dbd",
            "owner_id": "598756948389",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EKS-Cluster1-private-route-table"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cd4bc594d22c467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:route-table/rtb-093e2ec5205e2574e",
            "id": "rtb-093e2ec5205e2574e",
            "owner_id": "598756948389",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EKS-Cluster1-public-route-table"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cd4bc594d22c467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRTassoc1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086497a6c697c8194",
            "route_table_id": "rtb-06cc24f0f5a952dbd",
            "subnet_id": "subnet-00c3e531784e1be6a"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.privateRT1",
            "module.vpc1.aws_subnet.private_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fcea3b9733ee30a",
            "route_table_id": "rtb-06cc24f0f5a952dbd",
            "subnet_id": "subnet-00272e3d4fdfd0126"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.privateRT1",
            "module.vpc1.aws_subnet.private_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRTassoc1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0557c8bd2b684cc0d",
            "route_table_id": "rtb-093e2ec5205e2574e",
            "subnet_id": "subnet-0c0466c4741188b0f"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.publicRT1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a42e47b04625045",
            "route_table_id": "rtb-093e2ec5205e2574e",
            "subnet_id": "subnet-0cde58935c48306b2"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.publicRT1",
            "module.vpc1.aws_subnet.public_subnet1",
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:subnet/subnet-00c3e531784e1be6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c3e531784e1be6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster1-172.168.3.0/24-private-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-172.168.3.0/24-private-subnet"
            },
            "vpc_id": "vpc-04cd4bc594d22c467"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:subnet/subnet-00272e3d4fdfd0126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00272e3d4fdfd0126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster1-172.168.4.0/24-private-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-172.168.4.0/24-private-subnet"
            },
            "vpc_id": "vpc-04cd4bc594d22c467"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:subnet/subnet-0c0466c4741188b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0466c4741188b0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster1-172.168.1.0/24-public-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-172.168.1.0/24-public-subnet"
            },
            "vpc_id": "vpc-04cd4bc594d22c467"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:subnet/subnet-0cde58935c48306b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde58935c48306b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598756948389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Cluster1-172.168.2.0/24-public-subnet"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-172.168.2.0/24-public-subnet"
            },
            "vpc_id": "vpc-04cd4bc594d22c467"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "module.vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:598756948389:vpc/vpc-04cd4bc594d22c467",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-01c8dd2256b2ab569",
            "default_route_table_id": "rtb-0cea46830fd19e5e7",
            "default_security_group_id": "sg-075f0585a2a6a29e0",
            "dhcp_options_id": "dopt-0672cf9048b96b339",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04cd4bc594d22c467",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cea46830fd19e5e7",
            "owner_id": "598756948389",
            "tags": {
              "Name": "EKS-Cluster1-vpc"
            },
            "tags_all": {
              "Name": "EKS-Cluster1-vpc"
            }
          }
        }
      ]
    }
  ]
}